--- a/Project3/ShabaniBasharProject3/views/event/index.ejs
+++ b/Project3/ShabaniBasharProject3/views/event/index.ejs
@@ -3,6 +3,12 @@
 <div class="content">
     <main>
         <% let categories = {}; %>
+        <% events.forEach(event => {
+            if(!categories[event.category]){
+                categories[event.category] = [];
+            }
+            categories[event.category].push(event);
+        }); %>
         <% if(Object.keys(categories).length) {
             for(let category in categories){
                 %>
