Exercise 8 Final Commit

--- a/exercise8/ShabaniBasharExercise8/views/partials/header.ejs
+++ b/exercise8/ShabaniBasharExercise8/views/partials/header.ejs
@@ -21,3 +21,19 @@
         </div>
     </nav>
     <div class="content">
+
+        <%if(errorMessages.length > 0) {
+            errorMessages.forEach(message => { %>
+                <div class="error">
+                    <%=message%>
+                </div>
+            <%});
+        }%>
+    
+        <%if(successMessages.length > 0) {
+            successMessages.forEach(message => { %>
+                <div class="success">
+                    <%=message%>
+                </div>
+            <%});
+        }%>
